--- a/projects.html
+++ b/projects.html
@@ -38,8 +38,7 @@ MathJax.Hub.Config({
 </div>
 <p>My research is in applied mathematics and control theory. I aim to gain insights into the dynamical systems and design the systems&rsquo; behavior through rigorous mathematical analysis. Recent research focuses on cyber-physical systems, or more specifically, networked control systems, where the communication is a key to save energy and to protect privacy and security. 
 </p>
-<p>Many of my research work are not part of a project. Selected works are summarized <a href="docs/Portfolio2020.pdf" target=&ldquo;blank&rdquo;>here</a>. 
-</p>
+<p>Many of my research work are not part of a project. 
 <p>Below are projects I'm in.
 </p>
 <h2>JST CREST CyPhAI [2021-2026]</h2>
