--- a/index_jp.html
+++ b/index_jp.html
@@ -53,6 +53,10 @@ JST さきがけ研究者
 </p>
 <h2>ニュース　</h2>
 <ul>
+<li><p>2025年7月: JST 創発　後藤パネルで研究課題「構造不確実性と時間変化に対応する次世代グラフ信号処理」が採択されました
+	 <a href="https://www.jst.go.jp/souhatsu/call/sel24.html" target=&ldquo;blank&rdquo;>JST</a>　
+</p>
+</li>
 <li><p>2024年12月: IEEE Open Journal of Control Systems のAEになりました
 </p>
 </li>
