--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Links: <a href="https://www.nii.ac.jp/en/faculty/informatics/kishida_masako/" ta
 <a href="https://www.linkedin.com/in/masakokishida/" target=&ldquo;blank&rdquo;>Linkedin</a>
 </p>
 <h2>Research Interests</h2>
-<p>My research interests include
+<p>My research interests are in mathematical engineering including
 </p>
 <ul>
 <li><p>Applied mathematics
@@ -73,7 +73,11 @@ Links: <a href="https://www.nii.ac.jp/en/faculty/informatics/kishida_masako/" ta
 </ul>
 <h2>News</h2>
 <ul>
-<li><p>December 2024: Joining editorial board of IEEE Open Journal of Control Systems as AE (formally starting January 2025)
+<li><p>July 2025: JST FOREST grant proposal has been accepted (Goto panel)
+	 <a href="https://www.jst.go.jp/souhatsu/call/sel24.html" target=&ldquo;blank&rdquo;>JST</a>
+</p>
+</li>
+<li><p>December 2024: Joining editorial board of IEEE Open Journal of Control Systems as AE 
 </p>
 </li>
 <li><p>January 2024: Joined editorial board of IEEE Trans. on Automatic Control as AE
