--- a/index_jp.html
+++ b/index_jp.html
@@ -113,7 +113,7 @@ JST さきがけ研究者
 </li>
 </ul>
 <h2>研究紹介</h2>
-<p>応用数学の研究をしています（主に制御理論と数理最適化）
+<p>数理工学の研究をしています（主に制御理論と数理最適化）
 </p>
 <ul>
 <li><p>「数理最適化に基づく制御 〜モデル予測制御を中心に〜」
@@ -186,10 +186,6 @@ JST さきがけ研究者
 </li>
 </ul>
 <div id="footer">
-<div id="footer-text">
-Page generated 2024-12-17 10:28:23 CET, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
-(<a href="index_jp.jemdoc">source</a>)
-</div>
 </div>
 </td>
 </tr>
